<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/keyword"
        android:layout_width="339dp"
        android:layout_height="54dp"
        android:layout_marginBottom="600dp"
        android:autofillHints="@string/keyword_hint"
        android:hint="@string/keyword_hint"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="136dp"
        android:layout_height="24dp"
        android:fontFamily="sans-serif"
        android:text="@string/keyword_label"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#708BDC"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/keyword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/keywordWarning"
        android:layout_width="323dp"
        android:layout_height="17dp"
        android:text="@string/warning1"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold|italic"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keyword"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/priceLabel"
        android:layout_width="130dp"
        android:layout_height="24dp"
        android:labelFor="@id/minPrice"
        android:text="@string/price_label"
        android:textColor="#708BDC"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keywordWarning"
        app:layout_constraintVertical_bias="0.016" />

    <EditText
        android:id="@+id/minPrice"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/maxPrice"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceLabel"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/maxPrice"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceLabel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/priceWarning"
        android:layout_width="315dp"
        android:layout_height="22dp"
        android:layout_marginTop="4dp"
        android:text="@string/warning2"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minPrice"
        app:layout_constraintVertical_bias="0.0"
        android:visibility="gone" />

    <TextView
        android:id="@+id/conditionLabel"
        android:layout_width="130dp"
        android:layout_height="24dp"
        android:layout_marginTop="4dp"
        android:text="@string/condition_label"
        android:textColor="#708BDC"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceWarning"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/conditionNew"
        android:layout_width="105dp"
        android:layout_height="35dp"
        android:text="@string/condition_new"
        android:textColor="#6E6E6E"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceWarning"
        app:layout_constraintVertical_bias="0.08" />

    <CheckBox
        android:id="@+id/conditionUsed"
        android:layout_width="105dp"
        android:layout_height="35dp"
        android:text="@string/condition_used"
        android:textColor="#6E6E6E"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toEndOf="@+id/conditionNew"
        app:layout_constraintTop_toBottomOf="@+id/priceWarning"
        app:layout_constraintVertical_bias="0.08" />

    <CheckBox
        android:id="@+id/conditionUnspecified"
        android:layout_width="130dp"
        android:layout_height="35dp"
        android:text="@string/condition_unspecified"
        android:textColor="#6E6E6E"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/conditionUsed"
        app:layout_constraintTop_toBottomOf="@+id/priceWarning"
        app:layout_constraintVertical_bias="0.08" />

    <TextView
        android:id="@+id/sortbyLabel"
        android:layout_width="130dp"
        android:layout_height="24dp"
        android:text="@string/sortby_label"
        android:textColor="#708BDC"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conditionNew"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/sorBy"
        android:layout_width="329dp"
        android:layout_height="32dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sortbyLabel"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="153dp"
        android:layout_height="49dp"
        android:backgroundTint="#3B69F3"
        android:text="@string/search_button"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sorBy"
        app:layout_constraintVertical_bias="0.026" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="153dp"
        android:layout_height="49dp"
        android:backgroundTint="#3b69f3"
        android:text="@string/clear_button"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/searchButton"
        app:layout_constraintTop_toBottomOf="@+id/sorBy"
        app:layout_constraintVertical_bias="0.027" />


</androidx.constraintlayout.widget.ConstraintLayout>